<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/foto"
            android:paddingTop="10dp"
            android:textColor="@color/letra"
            android:textSize="15sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/DialogNombre"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textColor="@color/fondo"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/BtnCorreo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_email"
                android:text="@string/correo"
                android:textColor="@color/letra" />

            <Button
                android:id="@+id/BtnWeb1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_web_site"
                android:text="@string/web"
                android:textColor="@color/letra" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/fondo"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/DialogGrupo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/letra"
            android:textSize="16sp" />

        <Button
            android:id="@+id/BtnWeb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_action_web_site"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/web"
            android:textColor="@color/letra" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/fondo" />

        <TextView
            android:id="@+id/DialogOrigen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/letra"
            android:textSize="16sp" />

        <Button
            android:id="@+id/BtnWeb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_action_web_site"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/web"
            android:textColor="@color/letra" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/fondo" />
    </LinearLayout>

</ScrollView>